@@ -1,3 +1,9 @@
+2007-09-31  Nestor Salceda  <nestor.salceda@gmail.com>
+	
+	* AvoidUnusedParametersRule.cs: New rule to check for unused parameters
+	in a method.
+	* Makefile.am: Added the sources of the rule and the unit tests.
+
 2006-10-15  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* Gendarme.Rules.Performance.xml.in: Update Uri for rules (to generate
